# gsettings-tests

./: CMakeLists.txt  README.md  gsettings.c  gsettings.store
